--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,6 @@ pypdf==6.4.0
 pyphen==0.17.2
 python-bidi==0.6.7
 PyYAML==6.0.3
-pyzbar==0.1.9
 reportlab==4.4.5
 requests==2.32.5
 rlPyCairo==0.4.0
@@ -48,3 +47,4 @@ webencodings==0.5.1
 whitenoise==6.11.0
 xhtml2pdf==0.2.17
 zopfli==0.4.0
+zxing-cpp==2.3.0
